# l3arn_updated

./: .npmrc  L3ARN-MASTER-PROTOCOL.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml
l3arn-platform/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml
l3arn-platform/.github/workflows/: contracts-ci.yml  python-ci.yml  ts-ci.yml
l3arn-platform/apps/api/: Dockerfile  railway.toml  requirements.txt
l3arn-platform/apps/api/app/: main.py  settings.py
l3arn-platform/apps/api/app/agents/: registry.py  (+1 more)
l3arn-platform/apps/web/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
l3arn-platform/apps/web/src/: App.tsx  env.d.ts  index.css
l3arn-platform/docs/architecture/: overview.md  system_map.md
l3arn-platform/docs/decisions/: ADR-0001.md
l3arn-platform/docs/runbooks/: local-dev.md
l3arn-platform/docs/security/: auth-flow.md
l3arn-platform/infra/docker/: api.Dockerfile
l3arn-platform/infra/supabase/: project-config.md
l3arn-platform/scripts/: bootstrap.py  db_reset.py  lint.py  seed.py
l3arn-platform/security/: rls-checklist.md  secrets-handling.md  threat-model.md
l3arn-platform/supabase/config/: config.toml
l3arn-platform/supabase/functions/tool-proxy/: index.ts
l3arn-platform/supabase/migrations/: 00001_foundation.sql  00002_canonical_schema.sql
l3arn-platform/supabase/policies/: rls_policies.sql
l3arn-platform/supabase/seed/: dev_seed.sql
l3arn-platform/tests/api/: test_health.py  test_jwt.py
l3arn-platform/tests/contracts/: test_dto_sync.py
(+188 files in other folders)
