[project]
name = "l3arn-platform"
version = "0.1.0"
description = "L3ARN platform — workspace-level Python config"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["supabase.*", "gotrue.*", "postgrest.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "apps/api"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
